@@ -2,10 +2,12 @@ package org.example.jpr.contributor;
 
 import org.example.jpr.generation.CICDContributor;
 import org.example.jpr.generation.SpringProjectContributor;
-import org.example.jpr.generation.SpringProjectValidationController;
+import org.example.jpr.generation.SpringProjectValidationContributor;
 import org.example.jpr.generation.SpringRestControllerContributor;
+import org.example.jpr.provision.AzureAppServiceProvisionContributor;
 import org.example.jpr.scm.SCMContributor;
 import org.example.jpr.util.Constants;
+import org.example.jpr.validation.AzureAppServiceValidatorContributor;
 
 import java.util.Collections;
 import java.util.List;
@@ -26,7 +28,7 @@ public class ContributorFactory {
             case JAVA_REST_SERVICE -> List.of(
                     new SpringProjectContributor(),
                     new SpringRestControllerContributor(),
-                    new SpringProjectValidationController(),
+                    new SpringProjectValidationContributor(),
                     new CICDContributor()
             );
             case JAVA_LIBRARY -> Collections.emptyList();
@@ -42,14 +44,18 @@ public class ContributorFactory {
 
     private static List<Contributor> provisionContributors(Constants.PROJECT_TYPES type) {
         return switch (type) {
-            case JAVA_REST_SERVICE -> Collections.emptyList();
+            case JAVA_REST_SERVICE -> List.of(
+                    new AzureAppServiceProvisionContributor()
+            );
             case JAVA_LIBRARY -> Collections.emptyList();
         };
     }
 
     private static List<Contributor> validationContributors(Constants.PROJECT_TYPES type) {
         return switch (type) {
-            case JAVA_REST_SERVICE -> Collections.emptyList();
+            case JAVA_REST_SERVICE -> List.of(
+                    new AzureAppServiceValidatorContributor()
+            );
             case JAVA_LIBRARY -> Collections.emptyList();
         };
     }
